--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
 .bg-primary {background-color:#36454f;}
+
+body {
+    font-family: 'MedievalSharp', cursive;
+}
