--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .bg-primary {background-color: #36454f;}
-.bg-secondary {background-color: darkgray}
+.bg-secondary {background-color: darkgray;}
 
 .alert {color: darkseagreen;}
-.error {color: firebrick}
+.error {color: firebrick;}
