--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,5 +9,8 @@ body {
 .bg-primary {background-color: var(--charcoal);}
 .bg-secondary {background-color: darkgray;}
 
+.honeydew {color: honeydew}
+.lightgrey { color:lightgrey}
+
 .alert {color: darkseagreen;}
 .error {color: firebrick;}
