--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 
+:root {--charcoal: #36454f;}
+
 body {
     font-family: 'MedievalSharp', cursive;
 }
 
-:root {--charcoal: #36454f;}
+a:link {color: honeydew;}
+a:visited {color: lightgrey;}
 
 .bg-primary {background-color: var(--charcoal);}
 .bg-secondary {background-color: darkgray;}
@@ -14,3 +17,13 @@ body {
 
 .alert {color: darkseagreen;}
 .error {color: firebrick;}
+
+.portal-icon {
+    max-height: 22px;
+    width: auto;
+}
+
+#footer img {
+    max-height: 32px;
+    width: auto;
+}
