Improve Lighthouse report
https://cdn.discordapp.com/attachments/277708872725299200/793493739988844574/unknown.png

--- a/src/css/glyphicons.css
+++ b/src/css/glyphicons.css
@@ -6,6 +6,7 @@
        url('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.woff') format('woff'),
        url('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
        url('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  font-display: swap;
 }
 
 .glyphicon {
